[package]
name = "exe-runners"
version = "0.1.0"
edition = "2021"

[lib]
name = "exe_runners"

[dependencies]
# async
tokio = { workspace = true, features = ["sync", "rt", "macros", "rt-multi-thread", "signal"] }
futures-util = { workspace = true, features = ["std"] }

# tracing
tracing-futures.workspace = true
tracing.workspace = true

# task/runtime support
dashmap.workspace = true
thread-priority.workspace = true

# misc
thiserror.workspace = true
reth-tasks = { workspace = true, optional = true }

# feature `rayon`
rayon = { workspace = true, optional = true }
crossbeam-utils = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
pin-project = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["time"] }

[features]
default = []
reth-tasks = ["dep:reth-tasks"]
rayon = ["dep:rayon", "dep:crossbeam-utils", "dep:parking_lot", "dep:pin-project", "reth-tasks?/rayon"]
