[package]
name = "uniswap-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lib]
name = "uniswap_storage"
path = "src/lib.rs"

[dependencies]

alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-sol-types.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true


revm-database = { workspace = true, optional = true, features = ["alloydb"] }
reth-provider = { workspace = true, optional = true }
reth-rpc = { workspace = true, optional = true }
reth-rpc-convert = { workspace = true, optional = true }
eth-network-exts.workspace = true

futures.workspace = true
serde = { version = "1", features = ["derive"] }
auto_impl = "1.3"
eyre = "0.6.12"
itertools = "0.14"
async-trait = "0"

[dev-dependencies]
alloy-provider = { version = "1.1.3", default-features = false, features = [
    "pubsub",
    "ws",
] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"

[features]
default = ["full", "revm"]
full = ["v4", "v3", "angstrom"]
v4 = []
v3 = []
angstrom = []

revm = ["dep:revm-database"]
local-reth = [
    "dep:revm-database",
    "dep:reth-provider",
    "dep:reth-rpc",
    "dep:reth-rpc-convert",
]
