[package]
name = "uniswap-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lib]
name = "uniswap_storage"
path = "src/lib.rs"

[dependencies]

alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-sol-types.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true


revm-database = { workspace = true, optional = true, features = ["alloydb"] }
reth-provider = { workspace = true, optional = true }
reth-optimism-rpc = { workspace = true, optional = true }
reth-rpc = { workspace = true, optional = true }
reth-rpc-convert = { workspace = true, optional = true }

futures.workspace = true
serde = { version = "1", features = ["derive"] }
auto_impl.workspace = true
eyre.workspace = true
itertools = "0.14"
async-trait.workspace = true


[dev-dependencies]
alloy-provider = { workspace = true, default-features = false, features = [
    "pubsub",
    "ws",
] }
tokio = { workspace = true, features = ["full"] }
dotenv = "0.15"
op-alloy-network = { version = "0.23.1", default-features = false }

[features]
default = ["v4", "v3", "l1-angstrom", "revm"]
full = ["v4", "v3", "l1-angstrom", "l2-angstrom"]

v4 = []
v3 = []
l1-angstrom = ["v4"]
l2-angstrom = ["v4"]

revm = ["dep:revm-database"]
local-reth = [
    "dep:revm-database",
    "dep:reth-provider",
    "dep:reth-rpc",
    "dep:reth-rpc-convert",
    "dep:reth-optimism-rpc",
]
